# FamilyCom

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile
config/: com.familycom.daemon.plist  familycom.desktop
crates/familycom/: Cargo.toml
crates/familycom-core/: Cargo.toml
crates/familycom-core/src/: config.rs  db.rs  ipc.rs  lib.rs  protocol.rs  types.rs
crates/familycom/src/: app.rs  event.rs  ipc_client.rs  main.rs
crates/familycom/src/ui/: input.rs  layout.rs  messages.rs  mod.rs  peer_list.rs
crates/familycomd/: Cargo.toml
crates/familycomd/src/: app.rs  autostart.rs  client.rs  discovery.rs  ipc_server.rs  main.rs  notifications.rs  server.rs  tray.rs
pkg/archlinux/: PKGBUILD  build-package.sh  familycom.install
thoughts/shared/plans/: 2026-02-13-familycom-lan-messenger.md  2026-02-14-fix-mdns-peer-discovery.md  2026-02-14-message-persistence-and-notifications.md
