[workspace]
members = [
    "crates/familycom-core",
    "crates/familycomd",
    "crates/familycom",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.91"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros", "signal"] }
tokio-stream = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Platform directories
dirs = "6"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Config file
toml = "0.8"

# Shared library
familycom-core = { path = "crates/familycom-core" }
