[package]
name = "familycomd"
description = "FamilyCom LAN messenger daemon — background service with mDNS discovery, TCP messaging, and system tray"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "familycomd"
path = "src/main.rs"

[dependencies]
# Shared library with types, DB, and protocol definitions
familycom-core.workspace = true

# Async runtime: powers TCP server/client, Unix socket IPC, timers
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# mDNS: peer discovery and service registration on local network
mdns-sd = "0.12"

# Hostname: get the local machine's hostname for mDNS registration
hostname = "0.4"

# Network interface detection: find the default-route interface to restrict mDNS
netdev = "0.40"

# System tray icon: cross-platform tray icon from the Tauri team
tray-icon = "0.19"
# Tray menus: companion crate for tray-icon menu items
muda = "0.15"
# Icon loading: load PNG from embedded bytes
image = { version = "0.25", default-features = false, features = ["png"] }
# GTK initialization: required on Linux before using tray-icon/muda
gtk = "0.18"

# Desktop notifications: unified cross-platform notification API
notify-rust = "4"

# CLI argument parsing
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# UUID generation
uuid.workspace = true

# Config file
toml.workspace = true

# Platform directories
dirs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
tempfile = "3"
